<resources>
    <string name="app_name">ReTry</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="retry">ReTry</string>
    <string name="email">email</string>
    <string name="senha">senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueciSenha">Esqueci minha senha</string>
    <string name="criarConta">Criar uma nova conta</string>
    <string name="title_activity_esqueci_senha">Nova Senha</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="Email">Email</string>
    <string name="Senha">Senha</string>
    <string name="confSenha">Confirmar Senha</string>
    <string name="criar">Cadastrar</string>
    <string name="NovaSenha">Preencha o campo a baixo para gerar uma nova senha.</string>
    <string name="novaSenha">Nova Senha</string>
    <string name="title_activity_editar_perfil">Editar Perfil</string>
    <string name="Nome">Nome</string>
    <string name="confirmarSenha">Confirmar Senha</string>
    <string name="editar">Editar</string>
    <string name="title_activity_historico_reciclagem">Histórico de Reciclagem</string>
    <string name="title_activity_pontos_de_reciclagem">Pontos de Reciclagem</string>
    <string name="title_activity_ranking">Ranking</string>

    <string name="title_section1">Ranking Amigos</string>
    <string name="title_section2">Ranking Geral</string>
    <string name="NenhumItem">Nenhum item reciclado.</string>
    <string name="deletarHist">Limpar histórico de reciclagem</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">Este email não é válido</string>
    <string name="error_invalid_password">Esta senha é muito pequena</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
